update top and bottom of default notebook

--- a/vghor_code.ipynb
+++ b/vghor_code.ipynb
@@ -6,14 +6,55 @@
    "source": [
     "# Running Vghor_code\n",
     "\n",
-    "Uploaded `circostrbshoot.zip` to running session."
+    "~~Uploaded `circostrbshoot.zip` to running session.~~\n",
+    "\n",
+    "Run the five cells below by clicking on each and typing `shift-enter`. Alternatively, use the `Run` button from menu."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  circostrbshoot.zip\n",
+      "   creating: circostrbshoot/\n",
+      "   creating: circostrbshoot/.ipynb_checkpoints/\n",
+      "  inflating: circostrbshoot/.ipynb_checkpoints/circos-checkpoint.conf  \n",
+      "   creating: __MACOSX/\n",
+      "   creating: __MACOSX/circostrbshoot/\n",
+      "   creating: __MACOSX/circostrbshoot/.ipynb_checkpoints/\n",
+      "  inflating: __MACOSX/circostrbshoot/.ipynb_checkpoints/._circos-checkpoint.conf  \n",
+      "  inflating: __MACOSX/circostrbshoot/._.ipynb_checkpoints  \n",
+      "  inflating: circostrbshoot/circos.conf  \n",
+      "  inflating: __MACOSX/circostrbshoot/._circos.conf  \n",
+      "  inflating: circostrbshoot/combined.highlights.1.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._combined.highlights.1.txt  \n",
+      "  inflating: circostrbshoot/combined.highlights.2.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._combined.highlights.2.txt  \n",
+      "  inflating: circostrbshoot/combined.highlights.3.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._combined.highlights.3.txt  \n",
+      "  inflating: circostrbshoot/combined.labels.2.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._combined.labels.2.txt  \n",
+      "  inflating: circostrbshoot/combined.labels.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._combined.labels.txt  \n",
+      "  inflating: circostrbshoot/combined.separator.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._combined.separator.txt  \n",
+      "  inflating: circostrbshoot/highlights.conf  \n",
+      "  inflating: __MACOSX/circostrbshoot/._highlights.conf  \n",
+      "  inflating: circostrbshoot/ideogram.conf  \n",
+      "  inflating: __MACOSX/circostrbshoot/._ideogram.conf  \n",
+      "  inflating: circostrbshoot/karyotype.combined.txt  \n",
+      "  inflating: __MACOSX/circostrbshoot/._karyotype.combined.txt  \n",
+      "  inflating: circostrbshoot/ticks.conf  \n",
+      "  inflating: __MACOSX/circostrbshoot/._ticks.conf  \n",
+      "  inflating: __MACOSX/._circostrbshoot  \n"
+     ]
+    }
+   ],
    "source": [
     "unzip circostrbshoot.zip"
    ]
@@ -29,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,65 +96,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "debuggroup summary 0.32s welcome to circos v0.69-6 31 July 2017 on Perl 5.022000\n",
-      "debuggroup summary 0.33s current working directory /home/jovyan/circos-0.69-6/circostrbshoot\n",
-      "debuggroup summary 0.33s command ../bin/circos -conf ./circos.conf\n",
-      "debuggroup summary 0.33s loading configuration from file ./circos.conf\n",
+      "debuggroup summary 0.25s welcome to circos v0.69-6 31 July 2017 on Perl 5.022000\n",
+      "debuggroup summary 0.25s current working directory /home/jovyan/circos-0.69-6/circostrbshoot\n",
+      "debuggroup summary 0.25s command ../bin/circos -conf ./circos.conf\n",
+      "debuggroup summary 0.25s loading configuration from file ./circos.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 0.33s found conf file ./circos.conf\n",
-      "debuggroup summary 0.55s debug will appear for these features: output,summary\n",
-      "debuggroup summary 0.55s bitmap output image ./circos.png\n",
-      "debuggroup summary 0.55s SVG output image ./circos.svg\n",
-      "debuggroup summary 0.55s parsing karyotype and organizing ideograms\n",
-      "debuggroup summary 0.55s karyotype has 1 chromosomes of total size 9,000,001\n",
-      "debuggroup summary 0.55s applying global and local scaling\n",
-      "debuggroup summary 0.56s allocating image, colors and brushes\n",
-      "debuggroup summary 3.01s drawing 1 ideograms of total size 9,000,001\n",
-      "debuggroup summary 3.01s drawing highlights and ideograms\n",
+      "debuggroup summary 0.26s found conf file ./circos.conf\n",
+      "debuggroup summary 0.45s debug will appear for these features: output,summary\n",
+      "debuggroup summary 0.45s bitmap output image ./circos.png\n",
+      "debuggroup summary 0.45s SVG output image ./circos.svg\n",
+      "debuggroup summary 0.45s parsing karyotype and organizing ideograms\n",
+      "debuggroup summary 0.45s karyotype has 1 chromosomes of total size 9,000,001\n",
+      "debuggroup summary 0.45s applying global and local scaling\n",
+      "debuggroup summary 0.46s allocating image, colors and brushes\n",
+      "debuggroup summary 10.36s drawing 1 ideograms of total size 9,000,001\n",
+      "debuggroup summary 10.36s drawing highlights and ideograms\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.01s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.36s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.01s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.36s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.01s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.36s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.01s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.36s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.36s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.37s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.38s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.38s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.38s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
       "Use of uninitialized value in subroutine entry at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Configuration.pm line 781.\n",
-      "debuggroup summary 3.02s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
-      "debuggroup summary 3.03s process track_0 highlight /home/jovyan/circos-0.69-6/circostrbshoot/combined.highlights.1.txt\n",
-      "debuggroup summary 3.04s process track_1 highlight /home/jovyan/circos-0.69-6/circostrbshoot/combined.highlights.2.txt\n",
-      "debuggroup summary 3.13s process track_2 highlight /home/jovyan/circos-0.69-6/circostrbshoot/combined.highlights.3.txt\n",
+      "debuggroup summary 10.38s found conf file /home/jovyan/circos-0.69-6/bin/../etc/tracks/highlight.bg.conf\n",
+      "debuggroup summary 10.38s process track_0 highlight /home/jovyan/circos-0.69-6/circostrbshoot/combined.highlights.1.txt\n",
+      "debuggroup summary 10.39s process track_1 highlight /home/jovyan/circos-0.69-6/circostrbshoot/combined.highlights.2.txt\n",
+      "debuggroup summary 10.52s process track_2 highlight /home/jovyan/circos-0.69-6/circostrbshoot/combined.highlights.3.txt\n",
       "\n",
       "  *** CIRCOS ERROR ***\n",
       "\n",
@@ -218,21 +259,43 @@
       " at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Error.pm line 425, <F> line 659.\n",
       "\tCircos::Error::fatal_error(\"io\", \"cannot_find\", \"combined.highlights.4.txt\", \" /home/jovyan/circos-0.69-6/circostrbshoot/.\\x{a} /home/jovyan/ci\"...) called at /home/jovyan/circos-0.69-6/bin/../lib/Circos/Utils.pm line 662\n",
       "\tCircos::Utils::locate_file(\"file\", \"combined.highlights.4.txt\", \"name\", \"highlight track id track_3\") called at /srv/conda/lib/perl5/site_perl/5.22.0/Memoize.pm line 245\n",
-      "\tMemoize::_memoizer(CODE(0x28fdf40), \"file\", \"combined.highlights.4.txt\", \"name\", \"highlight track id track_3\") called at (eval 138) line 1\n",
+      "\tMemoize::_memoizer(CODE(0x2eb56a0), \"file\", \"combined.highlights.4.txt\", \"name\", \"highlight track id track_3\") called at (eval 138) line 1\n",
       "\tMemoize::__ANON__(\"file\", \"combined.highlights.4.txt\", \"name\", \"highlight track id track_3\") called at /home/jovyan/circos-0.69-6/bin/../lib/Circos.pm line 836\n",
-      "\tCircos::run(\"Circos\", \"configfile\", \"./circos.conf\", \"_argv\", \"-conf ./circos.conf\", \"_cwd\", \"/home/jovyan/circos-0.69-6/circostrbshoot\") called at ../bin/circos line 536\n"
+      "\tCircos::run(\"Circos\", \"configfile\", \"./circos.conf\", \"_cwd\", \"/home/jovyan/circos-0.69-6/circostrbshoot\", \"_argv\", \"-conf ./circos.conf\") called at ../bin/circos line 536\n"
      ]
     },
     {
      "ename": "",
      "evalue": "255",
-     "execution_count": 10,
+     "execution_count": 5,
      "output_type": "error",
      "traceback": []
     }
    ],
    "source": [
     "../bin/circos -conf ./circos.conf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To view the SVG file, open a Python notebook in this session and then paste in the following code:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    from IPython.core.display import SVG\n",
+    "    SVG(filename='circos-0.69-6/circostrbshoot/circos.svg')\n",
+    "\n",
+    "-OR, depending on where you are when notebook made-\n",
+    "\n",
+    "\n",
+    "\n",
+    "    from IPython.core.display import SVG\n",
+    "    SVG(filename='circos.svg')"
    ]
   },
   {
