update top cell/preamble

--- a/vghor_code.ipynb
+++ b/vghor_code.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# Running Vghor_code\n",
     "\n",
-    "~~Uploaded `circostrbshoot.zip` to running session.~~\n",
+    "Files provided (except the result image) are already here. Circos should run. \n",
+    "\n",
+    "It will be interesting to see how long it takes here. (Chances are it may time out if it really takes that long to run because these sessions are limited to six hours; however, it may help troubleshoot is anything fundamental is 'off'.)\n",
     "\n",
     "Run the five cells below by clicking on each and typing `shift-enter`. Alternatively, use the `Run` button from menu."
    ]
