simplify path pointing to conf file in command triggering circos to run

--- a/vghor_code.ipynb
+++ b/vghor_code.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "../bin/circos -conf ./circos.conf"
+    "../bin/circos -conf circos.conf"
    ]
   },
   {
